[project]
name = "smart-agriculture-env"
version = "0.1.0"
description = "An RL environment for optimizing water and fertilizer usage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic",
    "openai",
    "fastapi",
    "uvicorn",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build-meta"

[tool.openenv]
config = "openenv.yaml"
